test/liftedConsuming1_2.slq

def main(){
	x:=H(0);
	y:=dup(x);
	if X(y){
		y:=2:int[3];
	}else{
		forget(y); /// error
	}
	return x;
}
